k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi
  labels:
    app: userapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
  template:
    metadata:
      labels:
        app: userapi
    spec:
      containers:
      - name: userapi
        image: registry.digitalocean.com/dhij/userapi:latest
        ports:
        - containerPort: 8080
