k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userapi-service
  labels:
    app: userapi
spec:
  type: LoadBalancer
  selector:
    app: userapi
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8080
